workspace = { members = ["derive"] }
[package]
name = "partial_config"
version = "0.5.0"
edition = "2021"
authors = [ "Aleksandr Petrosyan" ]
description = "A Rust crate to implement layered partial configuration"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]
json = ["serde_json/std"]
toml = ["toml/parse"]
derive = ["dep:partial_config_derive"]
tracing = ["partial_config_derive/tracing"]
log = ["partial_config_derive/log"]

[dependencies]
serde = { version = "1.0.197", optional = true, default-features = false }
serde_json = { version = "1.0.114", optional = true, default-features = false }
toml = { version = "0.8.12", optional = true, default-features = false }
partial_config_derive = { version = "0.1.0", optional = true, path = "derive/" }
proc-macro2 = "1.0.79"
