[package]
name = "partial_config"
version = "0.7.1"
edition = "2021"
authors = [ "Aleksandr Petrosyan" ]
description = "A Rust crate to implement layered partial configuration"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive", "serde"]

serde = ["dep:serde", "partial_config_derive/serde"]
eyre = ["dep:eyre"]
json = ["dep:serde_json", "serde_json/std"]
toml = ["dep:toml", "toml/parse"]
derive = ["dep:partial_config_derive", "serde/derive"]
tracing = ["dep:tracing", "partial_config_derive/tracing"]
log = ["dep:log", "partial_config_derive/log"]

[dependencies]
partial_config_derive = { version = "0.5.1", optional = true, path = "derive/" }

serde = { version = "1.0.197", optional = true, default-features = false }
serde_json = { version = "1.0.114", optional = true, default-features = false }
toml = { version = "0.8.12", optional = true, default-features = false }
proc-macro2 = { version = "1.0.79" }
log = { version = "0.4.21", optional = true }
tracing = { version = "0.1.40", optional = true }
eyre = { version = "0.6.12", optional = true }

[dev-dependencies]
trybuild  = { version = "1.0" }
