[package]
name = "partial_config_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing = []
log = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.79"

[lib]
proc-macro = true
