[package]
name = "partial_config_derive"
version = "0.1.0"
edition = "2021"
authors = [ "Aleksandr Petrosyan" ]
description = "A Rust crate to implement layered partial configuration"
license = "Apache-2.0"

[features]
tracing = []
log = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.79"

[lib]
proc-macro = true
