[package]
name = "partial_config_derive"
version = "0.5.2"
edition = "2021"
authors = [ "Aleksandr Petrosyan" ]
description = "Derive macros for `partial_config`: layered partial configuration"
license = "Apache-2.0"
repository = "https://github.com/appetrosyan/partial_config"
keywords = ["config", "configuration", "cli", "env", "derive"]
categories = ["config", "command-line-interface"]

[features]
tracing = []
log = []
serde = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro-error2 = "2.0"
proc-macro2 = "1.0.79"

[lib]
proc-macro = true
